--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -3,25 +3,25 @@ home:
     newestTools: Newest tools
     favoriteTools: 'Your favorite tools'
     allTools: 'All the tools'
-  subtitle: 'Handy tools for developers'
+  subtitle: 'Local makes private data secure'
   toggleMenu: 'Toggle menu'
   home: Home
   uiLib: 'UI Lib'
-  support: 'Support IT-Tools development'
-  buyMeACoffee: 'Buy me a coffee'
+  support: 'Download desktop version'
+  buyMeACoffee: 'Download'
   follow:
-    title: 'You like it-tools?'
+    title: 'You like localjson-tools?'
     p1: 'Give us a star on'
-    githubRepository: 'IT-Tools GitHub repository'
+    githubRepository: 'LocalJson-Tools GitHub repository'
     p2: 'or follow us on'
-    twitterAccount: 'IT-Tools Twitter account'
+    twitterAccount: 'LocalJson-Tools Twitter account'
     thankYou: 'Thank you!'
   nav:
     github: 'GitHub repository'
-    githubRepository: 'IT-Tools GitHub repository'
+    githubRepository: 'LocalJson-Tools GitHub repository'
     twitter: 'Twitter account'
-    twitterAccount: 'IT Tools Twitter account'
-    about: 'About  IT-Tools'
+    twitterAccount: 'LocalJson Tools Twitter account'
+    about: 'About'
     aboutLabel: 'About'
     darkMode: 'Dark mode'
     lightMode: 'Light mode'
