--- a/frontend/locales/es.yml
+++ b/frontend/locales/es.yml
@@ -7,21 +7,21 @@ home:
   toggleMenu: 'Toggle menu'
   home: Home
   uiLib: 'UI Lib'
-  support: 'Apoyar el desarrollo de IT-Tools'
-  buyMeACoffee: 'Buy me a coffee'
+  support: 'Download desktop version'
+  buyMeACoffee: 'Download'
   follow:
     title: 'Te gustan las it-tools?'
     p1: 'Danos una estrella en'
-    githubRepository: 'Repositorio de IT-Tools en GitHub'
+    githubRepository: 'Repositorio de LocalJson-Tools en GitHub'
     p2: 'o síguenos en'
-    twitterAccount: 'Cuenta de twitter de IT-Tools'
+    twitterAccount: 'Cuenta de twitter de LocalJson-Tools'
     thankYou: 'Muchas gracias!'
   nav:
     github: 'Repositorio en github'
     githubRepository: 'IT-Tools GitHub repository'
     twitter: 'Cuenta de Twitter'
-    twitterAccount: 'Cuenta de twitter de IT Tools'
-    about: 'Sobre  IT-Tools'
+    twitterAccount: 'Cuenta de twitter de LocalJson Tools'
+    about: 'Sobre'
     aboutLabel: 'Sobre'
     darkMode: 'Modo obscuro'
     lightMode: 'Modo claro'
