--- a/frontend/locales/zh.yml
+++ b/frontend/locales/zh.yml
@@ -3,12 +3,12 @@ home:
     newestTools: '最新工具'
     favoriteTools: '我的收藏'
     allTools: '全部工具'
-  subtitle: '助力开发人员和 IT 工作者'
+  subtitle: '本地计算私有数据更安全'
   toggleMenu: '切换菜单'
   home: '主页'
   uiLib: 'UI 库'
-  support: '支持 IT 工具开发'
-  buyMeACoffee: '赞助'
+  support: '桌面版更快数据更安全'
+  buyMeACoffee: '下载桌面版'
   follow:
     title: '关注我们'
     p1: '给我们 Star'
@@ -21,7 +21,7 @@ home:
     githubRepository: 'GitHub 仓库'
     twitter: 'Twitter 账号'
     twitterAccount: 'Twitter 账号'
-    about: '关于 IT-Tools'
+    about: '关于'
     aboutLabel: '关于'
     darkMode: '深色模式'
     lightMode: '浅色模式'
