--- a/frontend/locales/fr.yml
+++ b/frontend/locales/fr.yml
@@ -3,11 +3,11 @@ home:
     newestTools: 'Les nouveaux outils'
     favoriteTools: 'Vos outils favoris'
     allTools: 'Tous les outils'
-  subtitle: 'Outils pour les développeurs'
+  subtitle: 'Sécuriser les données privées localement'
   toggleMenu: 'Menu'
   home: Accueil
   uiLib: 'UI Lib'
-  buyMeACoffee: 'Soutenez IT-Tools'
+  buyMeACoffee: 'Download'
   follow:
     title: 'Vous aimez it-tools ?'
     p1: 'Soutenez-nous avec une star sur'
@@ -20,7 +20,7 @@ home:
     githubRepository: "Dépôt GitHub d'IT-Tools"
     twitter: 'Compte Twitter'
     twitterAccount: "Compte Twitter d'IT-Tools"
-    about: "À propos d'IT-Tools"
+    about: "À propos"
     aboutLabel: 'À propos'
     darkMode: 'Mode sombre'
     lightMode: 'Mode clair'
