--- a/frontend/locales/pt.yml
+++ b/frontend/locales/pt.yml
@@ -3,12 +3,12 @@ home:
     newestTools: 'Novas ferramentas'
     favoriteTools: 'Suas ferramentas favoritas'
     allTools: 'Todas as ferramentas'
-  subtitle: 'Ferraentas úteis para desenvolvedores'
+  subtitle: 'Local torna os dados privados seguros'
   toggleMenu: 'Menu'
   home: 'Início'
   uiLib: 'Biblioteca de UI'
-  support: 'Apoie o desenvolvimento do IT Tools'
-  buyMeACoffee: 'Pague-me um café'
+  support: 'Download desktop version'
+  buyMeACoffee: 'Download'
   follow:
     title: 'Gostou do it-tools?'
     p1: 'Dê uma estrela no'
@@ -21,7 +21,7 @@ home:
     githubRepository: 'repositório do IT-Tools no GitHub'
     twitter: 'Conta no Twitter'
     twitterAccount: 'conta do IT Tools no Twitter'
-    about: 'Sobre o IT-Tools'
+    about: 'Sobre o'
     aboutLabel: 'Sobre'
     darkMode: 'Modo Escuro'
     lightMode: 'Modo Claro'
