update about page and add appp ages

--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -43,6 +43,7 @@ home:
   toggleMenu: 'Toggle menu'
   home: Home
   uiLib: 'UI Lib'
+  apps: 'Apps'
   support: 'Download desktop version'
   buyMeACoffee: 'Download'
   follow:
