--- a/frontend/locales/pt.yml
+++ b/frontend/locales/pt.yml
@@ -7,6 +7,7 @@ home:
   toggleMenu: 'Menu'
   home: 'Início'
   uiLib: 'Biblioteca de UI'
+  apps: 'Apps'
   support: 'Download desktop version'
   buyMeACoffee: 'Download'
   follow:
