--- a/frontend/locales/uk.yml
+++ b/frontend/locales/uk.yml
@@ -7,6 +7,7 @@ home:
   toggleMenu: 'Перемикання меню'
   home: Головна
   uiLib: 'UI Бібліотека'
+  apps: 'Apps'
   support: 'Download desktop version'
   buyMeACoffee: 'Download'
   follow:
