--- a/frontend/locales/vi.yml
+++ b/frontend/locales/vi.yml
@@ -7,6 +7,7 @@ home:
   toggleMenu: 'Chuyển đổi menu'
   home: Trang chủ
   uiLib: 'Thư viện UI'
+  apps: 'Apps'
   support: 'Download desktop version'
   buyMeACoffee: 'Download'
   follow:
