--- a/frontend/locales/zh.yml
+++ b/frontend/locales/zh.yml
@@ -7,6 +7,7 @@ home:
   toggleMenu: '切换菜单'
   home: '主页'
   uiLib: 'UI 库'
+  apps: 'Apps'
   support: '桌面版更快数据更安全'
   buyMeACoffee: '下载桌面版'
   follow:
