--- a/frontend/locales/de.yml
+++ b/frontend/locales/de.yml
@@ -14,6 +14,7 @@ home:
   toggleMenu: Menü umschalten
   home: Startseite
   uiLib: UI-Bibliothek
+  apps: 'Apps'
   support: Download desktop version
   buyMeACoffee: Download
   follow:
