--- a/frontend/locales/fr.yml
+++ b/frontend/locales/fr.yml
@@ -7,6 +7,7 @@ home:
   toggleMenu: 'Menu'
   home: Accueil
   uiLib: 'UI Lib'
+  apps: 'Apps'
   buyMeACoffee: 'Download'
   follow:
     title: 'Vous aimez it-tools ?'
