--- a/web/locales/de.yml
+++ b/web/locales/de.yml
@@ -14,6 +14,7 @@ home:
   toggleMenu: Menü umschalten
   home: Startseite
   uiLib: UI-Bibliothek
+  apps: 'Apps'
   support: Download desktop version
   buyMeACoffee: Download
   follow:
@@ -35,6 +36,18 @@ home:
     mode: Wechseln zwischen dunklem/hellem Modus
 about:
   content: >
+    # About LocalJson
+
+    A lightweight cross-platform toolset based on Wails, supporting both web and desktop platforms including Mac, Windows, and Linux.
+
+    ## Desktop version Technologies
+
+    This project is a frontend implementation of It-Tools using Vue3, Vite, Naive-UI, and TypeScript. The desktop version is implemented using Wails with Go. Special thanks to other open-source projects.
+
+    ## Found a bug in the desktop version?
+
+    And if you found a bug in LocalJson-Desktop, or something doesn't work as expected, please file a bug report in the [issues section](https://github.com/inRemark/localjson/issues/new/choose) in the GitHub repository.
+
     # Über IT-Tools
 
     Diese wunderbare Website, erstellt mit ❤ von [Corentin
