--- a/web/locales/zh.yml
+++ b/web/locales/zh.yml
@@ -7,6 +7,7 @@ home:
   toggleMenu: '切换菜单'
   home: '主页'
   uiLib: 'UI 库'
+  apps: 'Apps'
   support: '桌面版更快数据更安全'
   buyMeACoffee: '下载桌面版'
   follow:
@@ -28,6 +29,19 @@ home:
     mode: '颜色模式'
 about:
   content: >
+    # 关于 LocalJson
+    
+    一个基于Wails实现的轻量化跨平台工具集，支持Web端和Mac、Windows和Linux等桌面端。
+    
+    ## 桌面版技术栈
+    
+    该项目前端基于[Vue3](https://github.com/vuejs/vue)、[Vite](https://github.com/vitejs/vite)、[Naive-UI](https://github.com/tusen-ai/naive-ui)和TypeScript实现的[It-Tools](https://github.com/CorentinTh/it-tools)，
+    桌面端基于Go实现的[Wails](https://github.com/wailsapp/wails), 同时感谢其他开源项目。
+    
+    ## 桌面版发现Bug
+    
+    如果您发现了LocalJson-Desktop Bug，或者某些功能未能按预期工作，可以在 GitHub 仓库的 [issues](https://github.com/inRemark/localjson/issues/new/choose) 中提交错误报告。
+
     # 关于 IT-Tools
 
     IT-Tools 由 [Corentin Thomasset](https://github.com/CorentinTh) 用 ❤ 开发，汇集了对开发人员和 IT 从业者有用的工具。如果对您有帮助，请将其分享给您的朋友，并且添加到收藏夹中！
